# pySEQTarget

./: .gitignore  README.md  pyproject.toml
.github/workflows/: autoformat.yml  docs.yml  lint.yml  pylint.yml  python-app.yml
docs/source/: conf.py  index.rst
pySEQ/: SEQopts.py  SEQoutput.py  SEQuential.py
pySEQ/analysis/: __init__.py  _hazard.py  _outcomePredict.py  _outcome_fit.py  _risk_estimates.py  _subgroup_fit.py  _survivalData.py  _survivalPredict.py  _survival_pred.py
pySEQ/data/: SEQdata_multitreatment.csv  __init__.py
pySEQ/error/: __init__.py  _param_checker.py
pySEQ/expansion/: __init__.py  _binder.py  _diagnostics.py  _dynamic.py  _mapper.py  _selection.py
pySEQ/helpers/: __init__.py  _bootstrap.py  _colString.py  _predict_model.py  _prepare_data.py
pySEQ/initialization/: _censoring.py  _denominator.py  _numerator.py  _outcome.py
pySEQ/plot/: __init__.py  _survivalPlot.py  _survival_plot.py
pySEQ/weighting/: __init__.py  _weightBinder.py  _weightCumprod.py  _weightData.py  _weightModel.py  _weightPredict.py  _weight_bind.py  _weight_data.py  _weight_fit.py  _weight_pred.py  _weight_stats.py
pySEQTarget/: SEQopts.py  SEQoutput.py  SEQuential.py  __init__.py
pySEQTarget/analysis/: __init__.py  _hazard.py  _outcome_fit.py  _risk_estimates.py  _subgroup_fit.py  _survival_pred.py
pySEQTarget/data/: __init__.py
pySEQTarget/error/: __init__.py  _datachecker.py  (+1 more)
sequential/: SEQexpand.py  SEQopts.py  SEQuential.py  __init__.py
tests/: test_coefficients.py  test_covariates.py  test_followup_options.py  test_general.py  test_hazard.py  test_parallel.py  test_survival.py
(+46 files in other folders)
