[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySEQ"
version = "0.1.0"
description = "A Python project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "polars",
    "tqdm",
    "statsmodels",
    "matplotlib"
]
