[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySEQ"
version = "0.1.0"
description = "Sequentially Nested Target Trial Emulation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "polars",
    "tqdm",
    "statsmodels",
    "matplotlib",
    "pyarrow"
]

[tools.setuptools.package-data]
SEQdata = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
