[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySEQ"
version = "0.9.0"
description = "Sequentially Nested Target Trial Emulation"
authors = [{name = "Ryan ODea", email = "ryan.odea@psi.ch"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "polars",
    "tqdm",
    "statsmodels",
    "matplotlib",
    "pyarrow",
    "lifelines"
]

[tools.setuptools]
packages = ["pySEQ", "pySEQ.data"]

[tools.setuptools.package-data]
SEQdata = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
